# backend

./: .env.example  .gitignore  .sqlx_offline_fix  Cargo.toml  Dockerfile  README.md  clippy.toml  ecosystem.config.js
.sqlx/: query-01d62f43d9b68a8d4b6c732a79aa3b08fa9f2747f89eed528923aa50ecd2b04d.json  query-03b87175f0643a6ee76399ef21a7d8bd2f7d6bb2248d02cbc37ee40b0943640c.json  query-085c6f8449cd36b40ad366109e33744abf718a2f84c96e3ccb188357eb4a988c.json  query-09834fa6f4b930e059d2e7865980510bb6f4f43bca5a3c68391fe7fe11590a95.json  query-0b5063825e311f71d036bb88550a926450a38d59288f9b9c725f5815aabe4b9d.json  query-0eb6c2a35109ce2b162c934720a5340ac5fac498982098b3a5af6baaf3ebeac3.json  query-0eec796c5c1c97e11f592b5d97a0a6baa51ed658ed617bdeddb25a14ba08c764.json  query-0f5f0ae3c8ec3f90f6bcef0c9f829cc13dbff0154c8cefdf670a7e08e5fdd933.json  query-12c9846170431add16916aa77eedb176a183db427f181a050a7a5436028e7961.json  query-1a1481f7c19ad81eeabea4cebc55e46f9a52f8023a889dfe7fbce7a151e64552.json  query-1dc6032ecd6ad7d0a75d7b9b9ba654384ee91dd3022d6a9d6e37c7569334d386.json  query-20cf4989977abde9f59cb4d11e497ef596668be29fde1e1b1f3964490001fd9b.json  query-24679d25f38ef1542973a6275f5d3ea429ca67045c211b830f100f4582b2132c.json  query-26fd440bd361ace2192143b187647ce4bd21da2b31757171898b0c9a37bac7fd.json  query-2cb680dc91f027c178875a5e74fde6c73a2bd3bc2ab7eae73fd6b4006c8b4f0d.json  query-2f53f4af735479d9276bf9ad09571f9a51d03d758fe049616d7509d45be64e95.json  query-3358515229663939be8093fadf93339609ffa4cf5c04d4c1e06e469d4cf652f7.json  query-3a955e6296e87c11e202db5958a5e5aecaa28ed82a960a9ea3df09fe08dd8bfe.json  query-3aaae3b79b647cdbba0f4d9b49577124e7270ce696ec981c63555aebac2ee2d2.json  query-46488f629c9a3d4005cf36cdab8b545ea90c0662b45224f227cbf46794b142a0.json  (+47 more)
(+57 files in other folders)
