[package]
name = "kizo-server"
version = "1.0.0"
edition = "2021"
authors = ["Kizo Team"]
license = "Apache-2.0"
description = "Kizo Prediction Market Backend Server in Rust"
default-run = "kizo-server"

[lib]
name = "kizo_server"
path = "src/lib.rs"

[[bin]]
name = "kizo-server"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Configuration
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.9.2"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# OpenAPI/Swagger documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
